tests/fixtures/invalid/pow_int_str_dict.py
# Cannot call pow() with Int, Str, Dict[str, int]
x = pow(1, "hello", {"a": 1})
